--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-debug.log*
 # Ignore Mac and Linux file system files
 *.swp
 .DS_Store
+
+# Ignore config files
+Gemfile.lock
+yarn.lock
+/db/schema.rb
