make the fonts we like available in the app

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "de_bored",
   "private": true,
   "dependencies": {
+    "@fontsource/dosis": "^4.5.4",
+    "@fontsource/play": "^4.5.2",
+    "@fontsource/roboto": "^4.5.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
