--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "rough-notation": "^0.5.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
