--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "4.6",
+    "chart.js": "^3.7.1",
+    "chartkick": "^4.1.1",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
