--- a/config/meta.yml
+++ b/config/meta.yml
@@ -2,4 +2,4 @@ meta_product_name: "de.Bored"
 meta_title: "de.Bored"
 meta_description: "Goodbye awkward silence!"
 meta_image: "cover.png" # should exist in `app/assets/images/`
-# twitter_account: "@product_twitter_account" # Coming soon
+twitter_account: "@de_bored_"
