one more check on product demo checklist

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "de.Bored"
-meta_title: "de.Bored"
+meta_title: "de.Bored the awkward silence!"
 meta_description: "Goodbye awkward silence!"
 meta_image: "cover.png" # should exist in `app/assets/images/`
 twitter_account: "@de_bored_"
